--- a/src/containers/cartPage/cartPage.css
+++ b/src/containers/cartPage/cartPage.css
@@ -78,8 +78,8 @@
     cursor: pointer;
 }
 .cart-row {
-    margin-top: -10px;
-    height: 400px;
+    margin-top: -18px;
+    height: 360px;
     overflow-y: scroll;
 }
 .cart-items-name{
@@ -100,4 +100,14 @@
     align-items: center;
     width: 50px;
 }
-
+.no-items{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.no-items h1 {
+    font-size: 30px;
+    color: #289402;
+}
