--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,194 +1,194 @@
-.login{
-    height: 100vh;
-    width: 100%;
-    background-image: url('../../assets/login-bg.png');
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+.login {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../../assets/login-bg.png");
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .login a {
-    text-decoration: none;
+  text-decoration: none;
 }
-.loginCard{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 323px;
-    height: 412px;
-    background-color: rgba(255, 255, 255, 0.75);
-    box-shadow: 0px 0px 4px rgba(137, 137, 137, 0.25);
-    backdrop-filter: blur(1.5px);
-    border-radius: 10px;
+.loginCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 323px;
+  height: 412px;
+  background-color: rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 0px 4px rgba(137, 137, 137, 0.25);
+  backdrop-filter: blur(1.5px);
+  border-radius: 10px;
 }
 .loginHeading {
-    text-align: center;
-    color: #08105A;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 48px;
-    line-height: 72px;
-    margin: 0;
+  text-align: center;
+  color: #08105a;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 72px;
+  margin: 0;
 }
 .forgetHeading {
-    text-align: center;
-    color: #08105A;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 28px;
-    margin-top: -30px;
+  text-align: center;
+  color: #08105a;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 28px;
+  margin-top: -30px;
 }
 .otpHeading {
-    text-align: center;
-    color: #08105A;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 25px;
-    margin-top: -30px;
+  text-align: center;
+  color: #08105a;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  margin-top: -30px;
 }
-.loginPara{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 24px;
-    text-align: center;
-    color: #08105A;
+.loginPara {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 24px;
+  text-align: center;
+  color: #08105a;
 }
-.forgetPara{
-    font-style: normal;
-    font-weight: 400;
-    padding: 0px 40px;
-    font-size: 16px;
-    line-height: 24px;
-    text-align: center;
+.forgetPara {
+  font-style: normal;
+  font-weight: 400;
+  padding: 0px 40px;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
 }
 .otpPara {
-    font-style: normal;
-    font-weight: 400;
-    padding: 0px 20px;
-    margin-top: -10px;
-    font-size: 14px;
-    line-height: 24px;
-    text-align: center;
+  font-style: normal;
+  font-weight: 400;
+  padding: 0px 20px;
+  margin-top: -10px;
+  font-size: 14px;
+  line-height: 24px;
+  text-align: center;
 }
 .loginInput {
-    width: 160px;
-    margin: 10px;
-    padding: 10px;
-    border: 1px solid #289402;
-    color: #289402;
-    font-size: 13px;
-    font-weight: 400;
-    border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.75);
-    box-shadow: 0px 0px 4px rgba(137, 137, 137, 0.25);
-    backdrop-filter: blur(1.5px);
+  width: 160px;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #289402;
+  color: #289402;
+  font-size: 13px;
+  font-weight: 400;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.75);
+  box-shadow: 0px 0px 4px rgba(137, 137, 137, 0.25);
+  backdrop-filter: blur(1.5px);
 }
-.loginInput::placeholder{
-    color: #289402;
-    font-size: 13px;
-    font-weight: 400;
+.loginInput::placeholder {
+  color: #289402;
+  font-size: 13px;
+  font-weight: 400;
 }
-.forgetPwd{
-    font-style: normal;
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 10px;
-    margin-top: -10px;
-    margin-left: 100px;
-    line-height: 21px;
-    color: #289402;
+.forgetPwd {
+  font-style: normal;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 10px;
+  margin-top: -10px;
+  margin-left: 100px;
+  line-height: 21px;
+  color: #289402;
 }
 .loginBtn {
-    margin-top: 10px;
-    background: #289402;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    border: #289402;
-    width: 180px;
-    height: 40px;
-    font-size: 16px;
-    line-height: 20px;
-    color: #FFFFFF;
-    cursor: pointer;
+  margin-top: 10px;
+  background: #289402;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  border: #289402;
+  width: 180px;
+  height: 40px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  cursor: pointer;
 }
 .otpBtn {
-    margin-top: 40px;
-    background: #289402;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    border: #289402;
-    width: 180px;
-    height: 40px;
-    font-size: 16px;
-    line-height: 20px;
-    color: #FFFFFF;
-    cursor: pointer;
+  margin-top: 40px;
+  background: #289402;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  border: #289402;
+  width: 180px;
+  height: 40px;
+  font-size: 16px;
+  line-height: 20px;
+  color: #ffffff;
+  cursor: pointer;
 }
-.otpInpBox h6{
-    margin: 0;
-    padding-bottom: 10px;
-    color: #343434;
-    font-weight: 700;
-    font-size: 14px;
+.otpInpBox h6 {
+  margin: 0;
+  padding-bottom: 10px;
+  color: #343434;
+  font-weight: 700;
+  font-size: 14px;
 }
 .otpField {
-    width: 38px;
-    margin-right: 10px;
-    padding-left: 10px;
-    border: 1px solid #289402;
-    color: #000;
-    font-weight: 700;
-    font-size: 18px;
-    border-radius: 5px;
-    height: 40px;
-    background-color:#F5F5F5;
-    outline: none;
+  width: 38px;
+  margin-right: 10px;
+  padding-left: 10px;
+  border: 1px solid #289402;
+  color: #000;
+  font-weight: 700;
+  font-size: 18px;
+  border-radius: 5px;
+  height: 40px;
+  background-color: #f5f5f5;
+  outline: none;
 }
 .otpField:focus {
-    outline: 1px solid #289402;
+  outline: 1px solid #289402;
 }
-.otpTimerBox{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.otpTimerBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .otpTimerBox p {
-    font-weight: 500;
-    font-size: 12px;
-    color: #08105A;
-    padding-top: 10px;
-    padding-right: 10px;
+  font-weight: 500;
+  font-size: 12px;
+  color: #08105a;
+  padding-top: 10px;
+  padding-right: 10px;
 }
-.resendOTP{
-    cursor: pointer;
+.resendOTP {
+  cursor: pointer;
 }
 .resendBtn {
-    display: flex;
-    justify-content: center;
-    margin-top: -25px;
+  display: flex;
+  justify-content: center;
+  margin-top: -25px;
 }
-.resetHeading{
-    text-align: center;
-    color: #08105A;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 33px;
-    margin: -50px 0 10px 0px;
+.resetHeading {
+  text-align: center;
+  color: #08105a;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 33px;
+  margin: -50px 0 10px 0px;
 }
 .resetBox {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 20px;
 }
-.resetBox span{
-    position: relative;
-    right: 45px;
+.resetBox span {
+  position: relative;
+  right: 45px;
 }
-.invalid-err{
-    color: red;
-    font-size: 12px;
+.invalid-err {
+  color: red;
+  font-size: 12px;
 }
