--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,87 +1,90 @@
-.navBar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 25px;
-    z-index: +999;
-    position: relative;
+.navBar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 25px;
+  z-index: +999;
+  position: relative;
 }
 
-.navBarLeft{
-    display: flex;
-    align-items: center;
+.navBarLeft {
+  display: flex;
+  align-items: center;
 }
 .navBarLeft img {
-    width: 38px;
-    height: 38px;
-    margin-bottom: 10px;
-    margin-right: 5px;
+  width: 38px;
+  height: 38px;
+  margin-bottom: 10px;
+  margin-right: 5px;
 }
 .navBarLeft h3 {
-    font-size: 25px;
-    font-weight: 700;
+  font-size: 25px;
+  font-weight: 700;
 }
 .navBarLeft span {
-    color: #3A7F0D;
+  color: #3a7f0d;
 }
 .navbar-searchBox {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 470px;
-    height: 28px;
-    background-color: #FFFFFF;
-    border-radius: 2px;
-    box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 45px rgb(0 0 0 / 20%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 470px;
+  height: 28px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 45px rgb(0 0 0 / 20%);
 }
 .navbar-searchBox input {
-    width: 338px;
-    height: 22px;
-    background-color: #FFFFFF;
-    border-radius: 2px;
-    border: none;
-    outline: none;
-    color: #232329
+  width: 338px;
+  height: 22px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  border: none;
+  outline: none;
+  color: #232329;
 }
 .table-searchBox {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 370px;
-    height: 28px;
-    background-color: #FFFFFF;
-    border-radius: 2px;
-    box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 45px rgb(0 0 0 / 20%);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 370px;
+  height: 28px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  box-shadow: 0 2px 10px rgb(0 0 0 / 10%), 0 10px 45px rgb(0 0 0 / 20%);
 }
 .table-searchBox input {
-    width: 238px;
-    height: 22px;
-    background-color: #FFFFFF;
-    border-radius: 2px;
-    border: none;
-    outline: none;
-    color: #232329
+  width: 238px;
+  height: 22px;
+  background-color: #ffffff;
+  border-radius: 2px;
+  border: none;
+  outline: none;
+  color: #232329;
 }
 .navBarRight {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 .navBarRight p {
-    font-size: 16px;
-    font-weight: 700;
-    padding-right: 30px;
-    font-family: 'roboto', sans-serif;
-    cursor: pointer;
+  font-size: 16px;
+  font-weight: 700;
+  padding-right: 30px;
+  font-family: "roboto", sans-serif;
+  cursor: pointer;
 }
 .navBarRight button {
-    background-color: transparent;
-    cursor: pointer;
-    color: #3A7F0D;
-    border: #3A7F0D 1px solid;
-    height: 30px;
-    width: 90px;
-    font-weight: 700;
-    border-radius: 5px;
-    font-size: 16px;
-    font-family: 'roboto', sans-serif;
+  background-color: transparent;
+  cursor: pointer;
+  color: #3a7f0d;
+  border: #3a7f0d 1px solid;
+  height: 30px;
+  width: 90px;
+  font-weight: 700;
+  border-radius: 5px;
+  font-size: 16px;
+  font-family: "roboto", sans-serif;
+}
+#shopping, #favourite, #add  {
+  outline: none;
 }
