--- a/src/containers/cartPage/cartPage.css
+++ b/src/containers/cartPage/cartPage.css
@@ -1,113 +1,112 @@
-.cartPage-div{
-    height: 100vh;
+.cartPage-div {
+  height: 100vh;
 }
 .cartPage h1 {
-    color: #303030;
-    font-weight: 700;
-    font-size: 32px;
-    padding-left: 35px;
-    margin-top: -10px;
+  color: #303030;
+  font-weight: 700;
+  font-size: 32px;
+  padding-left: 35px;
+  margin-top: -10px;
 }
-.cart-component{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    
+.cart-component {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 .cartPageBox {
-    display: flex;
-    flex-wrap: wrap;
-    margin-left: 30px;
-    padding: 0;
-    overflow-y:scroll; 
-    position:relative;
-    height: 616px;
-    width: 650px;
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: 30px;
+  padding: 0;
+  overflow-y: scroll;
+  position: relative;
+  height: 616px;
+  width: 650px;
 }
-.bill-board{
-    position: fixed;
-    left: 72.5%;
-    top: 23.5%;
+.bill-board {
+  position: fixed;
+  left: 72.5%;
+  top: 23.5%;
 }
 .cart-container {
-    width: 352px;
-    height: 530px;
-    background-color: #fff;
-    border-radius: 10px;
+  width: 352px;
+  height: 530px;
+  background-color: #fff;
+  border-radius: 10px;
 }
-.cart-container h1{
-    padding-top: 10px;
-    padding-bottom: 0;
-    text-align: center;
-    margin: 0;
+.cart-container h1 {
+  padding-top: 10px;
+  padding-bottom: 0;
+  text-align: center;
+  margin: 0;
 }
-.cart-title{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    color: #3A7F0D;
-    font-weight: 500;
-    font-size: 20px;
-    flex-direction: row;
+.cart-title {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: #3a7f0d;
+  font-weight: 500;
+  font-size: 20px;
+  flex-direction: row;
 }
-.cart-items{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    box-shadow: 0px 0px 4px rgba(65, 65, 65, 0.1);
-    border-radius: 4px;
-    font-weight: 500;
-    font-size: 20px;
-    flex-direction: row;
+.cart-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  box-shadow: 0px 0px 4px rgba(65, 65, 65, 0.1);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 20px;
+  flex-direction: row;
 }
-.cartBuy-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+.cartBuy-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 .cartBuy-btn button {
-    background-color: #289402;
-    border-radius: 4px;
-    border: none;
-    font-weight: 600;
-    font-size: 10px;
-    color: #fff;
-    padding: 10px 20px;
-    margin-top: 10px;
-    cursor: pointer;
+  background-color: #289402;
+  border-radius: 4px;
+  border: none;
+  font-weight: 600;
+  font-size: 10px;
+  color: #fff;
+  padding: 10px 20px;
+  margin-top: 10px;
+  cursor: pointer;
 }
 .cart-row {
-    margin-top: -18px;
-    height: 360px;
-    overflow-y: scroll;
+  margin-top: -18px;
+  height: 360px;
+  overflow-y: scroll;
 }
-.cart-items-name{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 100px;
+.cart-items-name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100px;
 }
-.cart-items-name2{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 50px;
+.cart-items-name2 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50px;
 }
-.cart-items-name3{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 50px;
+.cart-items-name3 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 50px;
 }
-.no-items{
-    width: 100%;
-    height: 500px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.no-items {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .no-items h1 {
-    font-size: 30px;
-    color: #289402;
+  font-size: 30px;
+  color: #289402;
 }
