--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -191,4 +191,16 @@
 .invalid-err {
   color: red;
   font-size: 12px;
+  text-align: center;
+  padding: 5px 10px;
+  margin:0;
+}
+.signup{
+  font-style: normal;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+  margin:5px 0 0 0;
+  line-height: 21px;
+  color: #289402;
 }
